<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            tools:context="com.niortreactnative.fragments.LineListFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/line1"
                android:gravity="center"
                android:text="@string/line1_identifier"
                android:textColor="@android:color/white"
                android:textSize="@dimen/listLine_textSize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/line1_secondary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line1_departure"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line1_arrival"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/line2"
                android:gravity="center"
                android:text="@string/line2_identifier"
                android:textColor="@android:color/white"
                android:textSize="@dimen/listLine_textSize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/line2_secondary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line2_departure"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line2_arrival"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/line3"
                android:gravity="center"
                android:text="@string/line3_identifier"
                android:textColor="@android:color/white"
                android:textSize="@dimen/listLine_textSize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/line3_secondary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line3_departure"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line3_arrival"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/line4"
                android:gravity="center"
                android:text="@string/line4_identifier"
                android:textColor="@android:color/white"
                android:textSize="@dimen/listLine_textSize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/line4_secondary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line4_departure"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line4_arrival"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/line5"
                android:gravity="center"
                android:text="@string/line5_identifier"
                android:textColor="@android:color/white"
                android:textSize="@dimen/listLine_textSize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/line5_secondary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line5_departure"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line5_arrival"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/line6"
                android:gravity="center"
                android:text="@string/line6_identifier"
                android:textColor="@android:color/white"
                android:textSize="@dimen/listLine_textSize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/line6_secondary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line6_departure"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line6_arrival"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/line7"
                android:gravity="center"
                android:text="@string/line7_identifier"
                android:textColor="@android:color/white"
                android:textSize="@dimen/listLine_textSize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/line7_secondary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line7_departure"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/line7_arrival"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/listLine_textSize"/>
            </LinearLayout>

        </LinearLayout>




    </LinearLayout>


</ScrollView>
